src/objects/Plan_Requirement__c.object
<CustomObject>
    <description>The various course requirements for completing a Program Plan.</description>
    <label>Plan Requirement</label>
    <nameField>
        <label>Plan Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Category__c</fullName>
        <description>Indicates the type of Plan Requirement, for example, optional or required.</description>
        <inlineHelpText>Indicates the type of Plan Requirement, for example, optional or required.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course associated with this Plan Requirement. Leave blank for a parent Plan Requirement with nested Plan Requirements.</description>
        <inlineHelpText>The Course associated with this Plan Requirement. Leave blank for a parent Plan Requirement with nested Plan Requirements.</inlineHelpText>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Plan Requirements</relationshipLabel>
        <relationshipName>Plan_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <description>The number of credits a student receives for satisfying this requirement.</description>
        <inlineHelpText>The number of credits a student receives for satisfying this requirement.</inlineHelpText>
        <label>Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of Plan Requirement.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Plan Requirement is one of multiple requirements or multiple levels of requirements, specifies the parent Plan Requirement. Use this field to group a list of optional Courses that satisfy a generic requirement.</description>
        <inlineHelpText>If the Plan Requirement is one of multiple requirements or multiple levels of requirements, specifies the parent Plan Requirement. Use this field to group a list of optional Courses that satisfy a generic requirement.</inlineHelpText>
        <label>Parent Plan Requirement</label>
        <referenceTo>Plan_Requirement__c</referenceTo>
        <relationshipLabel>Plan Requirements</relationshipLabel>
        <relationshipName>Plan_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program Plan this requirement is for. If you&apos;re grouping Plan Requirements together under a Parent Plan Requirement, best practice is to link only the top-level Plan Requirement to a Program Plan.</description>
        <inlineHelpText>The Program Plan this requirement is for. If you&apos;re grouping Plan Requirements together under a Parent Plan Requirement, best practice is to link only the top-level Plan Requirement to a Program Plan.</inlineHelpText>
        <label>Program Plan</label>
        <referenceTo>Program_Plan__c</referenceTo>
        <relationshipLabel>Plan Requirements</relationshipLabel>
        <relationshipName>Plan_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This requirement&apos;s place in the Program Plan, for example, &quot;1&quot; indicates the first semester. Use this field to indicate the overall progression for the entire Program Plan, or to sort the order of sub-requirements within a single parent Plan Requirement.</description>
        <inlineHelpText>This requirement&apos;s place in the Program Plan, for example, &quot;1&quot; indicates the first semester. Use this field to indicate the overall progression for the entire Program Plan, or to sort the order of sub-requirements within a single parent Plan Requirement.</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>